--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chart.js": "4.4.0",
     "core-js": "3.31.1",
     "element-plus": "2.3.8",
+    "gsap": "^3.12.5",
     "jwt-decode": "3.1.2",
     "lodash": "4.17.21",
     "moment": "2.29.4",
